src/test/gitops/org/pro/env/test-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    choerodon.io/network-service-instances: devops-service-ed8ad
  labels:
    choerodon.io/network: service
  name: devops-service-2f5e
spec:
  ports:
  - name: http1
    port: 80
    protocol: TCP
    targetPort: 80
  sessionAffinity: None
  type: ClusterIP
